# qtrading

quant-options-monitor/: README.md  pyproject.toml
quant-options-monitor/configs/: example.yaml
quant-options-monitor/src/: config.py
quant-options-monitor/src/alerting/: alerts.py
quant-options-monitor/src/app/: api.py  scheduler.py
quant-options-monitor/src/backtesting/: equity.py  metrics.py  options.py
quant-options-monitor/src/data/: models.py  providers.py
quant-options-monitor/src/features/: technical.py  volatility.py
quant-options-monitor/src/ml/: dataset.py  models.py
quant-options-monitor/src/options/: __init__.py  strategies.py
quant-options-monitor/src/regime/: __init__.py  classifier.py
quant-options-monitor/src/risk/: manager.py
quant-options-monitor/tests/: test_backtest_and_scheduler.py  test_legacy_yfinance_provider.py  test_strategy_and_risk.py  test_technical.py  test_volatility.py
quant_options_monitor/: README.md  pyproject.toml  requirements.txt
quant_options_monitor/src/quant_options_monitor/: __init__.py
quant_options_monitor/src/quant_options_monitor/data/: __init__.py  base.py  yfinance_provider.py
quant_options_monitor/src/quant_options_monitor/features/: __init__.py  pipeline.py  regime.py  technicals.py
quant_options_monitor/tests/: test_bear_put_spread_selector.py  test_bull_call_spread_selector.py  test_calendar_spread_selector.py  test_equity_signal.py  test_iron_condor_selector.py  test_long_butterfly_selector.py  test_market_data_provider.py  test_market_regime_classifier.py  test_options_models.py  test_options_provider.py  test_options_selector.py  test_quant_options_technicals.py  test_trade_filters.py
(+153 files in other folders)
