[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-options-monitor-core"
version = "0.1.0"
description = "Typed quantitative equity and options research components."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.5",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "yfinance>=0.2",
  "fastapi>=0.110",
  "streamlit>=1.30",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant_options_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
